# numanpy

./: LICENSE  README.md  meson.build  pyproject.toml
applications/: fixed_income.ipynb
numanpy/: root_finding.py
